# homework_1

./: Dockerfile  F_engineering.ipynb  Loan_Approval_Prediction_1.ipynb  address_book.pickle  diagram.drawio  hw09.ipynb  notebook.ipynb  pyproject.toml  requirements.txt  template_linear_regression_multiple_lab.ipynb  template_transformers_pipelines_lab.ipynb
Kaggle/: DRU_Kaggle_Intro.ipynb  Ghouls_Goblins_and_Ghosts_Boo.ipynb
Supervised_Learning/: DRU_Kaggle_Intro.ipynb
Tensorflow/Introduction to Computer Vision/: C1W3_Assignment.ipynb
Tensorflow/Natural Language Processing in TensorFlow/C3/W1/ungraded_labs/: C3_W1_Lab_2_sequences_basic.ipynb
Tensorflow/Natural Language Processing in TensorFlow/C3/W3/ungraded_labs/: C3_W3_Lab_3_Conv1D.ipynb
Tensorflow/Sequences, Time Series and Prediction/C4/W2/ungraded_labs/: C4_W2_Lab_1_features_and_labels.ipynb
Tensorflow/Sequences, Time Series and Prediction/C4/W3/ungraded_labs/: C4_W3_Lab_2_LSTM.ipynb
smartBot/: address_book_classes.py  commands.py  contact_page.py  contact_page_factory.py
week7/: template_gpt_lab_2.ipynb
