[tool.poetry]
name = "Py_Web_HW_2"
version = "0.1.0"
description = ""
authors = ["Oleksii Latypov <oleksii.latypov.la@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_1"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
